Fix tooltip overlapping.

--- a/assets/sass/components/global/_googlesitekit-header.scss
+++ b/assets/sass/components/global/_googlesitekit-header.scss
@@ -41,7 +41,7 @@
 		right: 0;
 		top: 0;
 		transition: box-shadow $t-default ease-in-out;
-		z-index: 12;
+		z-index: 10000;
 
 		.wp-responsive-open & {
 			margin-left: -18px;
